# ofxstatement-advanzia-de

./: Pipfile  README.rst  pyproject.toml
src/ofxstatement_advanzia_de/: plugin.py
