[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-advanzia-de"
version = "0.1.0"
authors = [
  { name="Arne Keller", email="arne.keller@posteo.de" },
]
description = "ofxstatement plugin to import German Advanzia statements (Schmetterling Mastercard)"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "advanzia"]
dependencies = [
  "ofxstatement",
  "pdfplumber",
]

[project.urls]
Homepage = "https://github.com/FliegendeWurst/ofxstatement-advanzia-de"

[project.entry-points."ofxstatement"]
advanzia-de = "ofxstatement_advanzia_de.plugin:AdvanziaDEPlugin"
